no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -13,6 +13,7 @@ DOCUMENTED ELSEWHERE ==>          #In go testing:
                                   #In go debugging:
                                   #  - go test profiling CLI flags
                                   #  - go tool pprof
+                                  #  - go tool trace
 
 
                                              /=+===============================+=\
