--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -6,13 +6,6 @@
 
 TODO:
   - commands:
-     - tracing:
-        - https://golang.org/pkg/runtime/trace/
-        - started tracing doc in bottom of debugging doc
-     - profiling:
-        - https://blog.golang.org/pprof
-        - https://golang.org/doc/diagnostics.html
-        - https://blog.learngoprogramming.com/a-visual-guide-to-golang-memory-allocator-from-ground-up-e132258453ed
      - https://golang.org/pkg/testing/quick/
      - https://golang.org/doc/cmd
      - https://golang.org/cmd/
@@ -30,7 +23,6 @@ TODO:
      - https://github.com/matttproud/gochecklist
      - https://github.com/golang/go/wiki/GitHubCodeLayout
      - https://github.com/golang/go/wiki/CompilerOptimizations
-     - https://blog.golang.org/race-detector
      - https://godoc.org/
      - https://pkg.go.dev/
   - https://blog.golang.org
@@ -45,6 +37,7 @@ TODO:
   - add VSCode shortcuts
   - go through to_learn.txt
      - including delve and other debuggers
+        - https://rakyll.org/coredumps/
   - https://github.com/golang/go/wiki/CodeTools
   - https://github.com/golang/go/wiki/Projects
   - https://github.com/golang/go/wiki/LearnServerProgramming#toolkits-and-frameworks
@@ -926,9 +919,6 @@ GOROUTINE ==>                     #Like coroutine:
 
 runtime.Gosched()                 #Make current goroutine yield.
                                   #I.e. allow other goroutines to use CPU before starting again.
-ENVVAR GODEBUG="asyncpreemptoff=1"#Disables pre-emptive goroutine yields.
-ENVVAR GODEBUG="schedtrace=UINT"	#Every UINTms, print debug information about thread|goroutine scheduler
-ENVVAR GODEBUG="scheddetail=1"		#Verbose mode with schedtrace=UINT
 
 EXIT ==>                          #Process (main goroutine) exit terminates threads
                                   #  - does not wait for their exit
@@ -948,22 +938,19 @@ runtime.UnlockOSThread()          #Inverse
 runtime.NumGoroutine()->INT       #Number of running goroutines
 
 SHARED MEMORY ==>                 #All goroutines from same package share package scope.
-                                  #Also, if FUNC is closure, still holds reference to uper scopes.
-
+                                  #Also, if FUNC is closure, still holds reference to upper scopes.
 COLLISION ==>                     #Can happen due to shared memory between goroutines.
 INSTRUCTIONS RE-ORDERING ==>      #Compiler might also re-order instructions when this would not impact behavior within same goroutine
                                   #  - even if it might impact other goroutines accessing shared memory
                                   #For example: a = 1; b = 2;
                                   #  - second statement might be run before first since that does not change the current goroutine
                                   #  - so if another goroutine should not assume that if b == 2, then a == 1
-
 SYNCHRONIZATION ==>               #See concurrency doc.
                                   #Common synchronization patterns in Go (in preference order):
                                   #  - avoiding shared resources
                                   #  - CHAN send|receive is guaranteed to be in order
                                   #  - "sync" and "sync/atomic" packages
                                   #Note: nothing is ever re-ordered before|after a go FUNC() statement
-
 MAPS ==>                          #MAP[KVAL] = VAL is not atomic.
                                   #I.e. one goroutine might read it while it is being half-written by another one
                                   #  - i.e. not a problem if read-only, or write-only (single writer)
