--- a/Languages/Go/go_testing.go.txt
+++ b/Languages/Go/go_testing.go.txt
@@ -8,7 +8,7 @@
 VERSION ==>                       #See Go language
 
 DOCUMENTED ELSEWHERE ==>          #In go debugging:
-                                  #  - go test profiling CLI flags
+                                  #  - go test profiling|tracing CLI flags
                                   #  - testing.AllocsPerRun()
 
 
@@ -107,6 +107,31 @@ T.Skip[f](...)                    #Run T.Log[f](...) then t.SkipNow()
 T.Name()->"TestNAME"              #
 
 T.Helper()                        #Make function as test helper, i.e. file|line information not printed
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:         TESTING QUICK         :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+import "testing/quick"
+quick.Check
+ (FUNC(...)->BOOL, *CONFIG)
+ ->ERROR|nil
+
+quick.Config                      #
+CONFIG.MaxCount                   #INT. Number of iterations
+CONFIG.MaxCountScale              #FLOAT64. When MaxCount 0, scale factor???
+go test -quickchecks FLOAT64      #CONFIG.MaxCountScale default value (def: 100)
+CONFIG.Rand                       #*rand.RAND. Randomness source (def: pseudo-random)
+
+quick.Value
+ (reflect.TYPE, *rand.RAND)
+ ->reflect.VALUE,OK               #Retrieves a random value from a specific type
+CONFIG.Values
+ ([]reflect.VALUE, *rand.RAND)    #Customize how random values are generated
 
 
                                              /=+===============================+=\
