--- a/Languages/Go/go_debugging.go.txt
+++ b/Languages/Go/go_debugging.go.txt
@@ -87,7 +87,7 @@ PROFILE.Count()->INT              #Retrieve profile-specific current COUNT
 PROFILE.Add(VAL, INT)             #Record the current stack trace (skipping INT frames) with key VAL
 PROFILE.Remove(VAL)               #
 
-NewProfile('TYPE')->*PROFILE      #Create a custom profiler
+pprof.NewProfile('TYPE')->*PROFILE#Create a custom profiler
                                   #Must add a count() and write() methods
 
 pprof.StartCPUProfile(WRITER)
@@ -341,10 +341,11 @@ MEM_STATS.Lookups UINT64          #Number of time a POINTER was deferenced
 TRACE_FILE                        #Similar to profiling, but instead:
                                   #  - records everything instead of sampling
                                   #  - records over time, i.e. can see as time series graph
+                                  #  - especially good to debug latency|wait issues
                                   #Records information over time:
                                   #  - includes:
-                                  #     - number of goroutines|threads running|waiting
                                   #     - heap memory used
+                                  #     - number of goroutines|threads running|waiting
                                   #     - syscalls
                                   #     - GC
                                   #  - can be per CPU ("process")
@@ -356,30 +357,76 @@ TRACE_FILE                        #Similar to profiling, but instead:
                                   #  - can be per goroutine
                                   #  - can be as graph showing non-wait time (minimum mutator utilization)
                                   #Can group into programmatical user-defined:
-                                  #  - tasks: global time region
-                                  #  - regions
+                                  #  - tasks: group functions|goroutines together. Can be nested.
+                                  #  - regions: time interval within a specific goroutine. Can be nested.
+                                  #  - logs: message|metadata at a specific point in time
 
 go test -trace=TRACE_FILE         #Write TRACE_FILE
 
-import "runtime[/trace]"
-
+import "runtime/trace"
+trace.Start(WRITER)->ERROR|nil
+trace.Stop()                      #Same but programmatic
 runtime.StartTrace()->ERROR|nil
 runtime.StopTrace()
-runtime.ReadTrace()->[]BYTE       #Same but programmatic
+runtime.ReadTrace()->[]BYTE       #Low-level API for trace.Start|Stop()
 
 trace.IsEnabled()->BOOL           #
 
 trace.NewTask(CONTEXT, STR)       #Start a user-defined task
  ->CONTEXT2,TASK                  #CONTEXT2 must be passed to other trace.*(CONTEXT, ...) (which should otherwise use nil)
                                   #STR is custom name
-                                  #Can be nested
 TASK.End()                        #
+
+trace.StartRegion(CONTEXT, STR)
+ ->*REGION
+REGION.End()                      #Same but for a user-defined region
+trace.WithRegion
+ (CONTEXT, STR, FUNC())           #Call StartRegion() then FUNC() then REGION.End()
+
+trace.Log
+ (CONTEXT, 'CATEGORY', 'MESSAGE') #Adds a user-defined trace log
+trace.Logf(CONTEXT, 'CATEGORY',
+ 'MESSAGE', VAL...)               #Same but using fmt.Sprintf()
 
 go tool trace [BIN] TRACE_FILE    #Visualize trace file in browser
                                   #  - Chromium is better at visualizing the main dynamic graph
                                   #BIN: like go tool pprof
 -http=HOST:PORT                   #
 -d                                #Verbose mode
-
 -pprof=TYPE                       #Output in a format to visualize with go tool pprof
                                   #TYPE can be net|sync|syscall|scheduler for network|mutex|syscall|scheduler waits
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:          GOROUTINES           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+ENVVAR GODEBUG="asyncpreemptoff=1"#Disables pre-emptive goroutine yields.
+ENVVAR GODEBUG="schedtrace=UINT"	#Every UINTms, print debug information about thread|goroutine scheduler
+ENVVAR GODEBUG="scheddetail=1"		#Verbose mode with schedtrace=UINT
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:           DATA RACE           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+go build|test|get -race           #Prints a warning (with stack trace) on any data races:
+                                  #  - when two goroutines access shared memory in a thread-unsafe way
+                                  #Increases memory and CPU consumption a lot, i.e. only for debugging
+                                  #Instruments code, i.e. only detect data races in code that is run
+                                  #  - i.e. good to use in tests with high coverage
+                                  #Adds the "race" build tag
+ENVVAR GORACE="VAR=VAL ..."       #go ... -race options
+GORACE="log_path=PATH"            #Where to print (def: 'stderr')
+GORACE="halt_on_error=0|1"        #If 1 (def: 0), aborts on error
+GORACE="exitcode=UINT"            #Exit code on error (def: 66)
+GORACE="atexit_sleep_ms=UINT"     #Before exit, wait for UINTms (def: 1s)
+GORACE="strip_path_prefix=STR"    #Remove STR from the beginning of all paths in stack traces, to simplify them
+GORACE="history_size=UINT"        #Detection relies on remembering past memory access in a buffer of 32e3 elements
+                                  #This multiplies it by 2**UINT
