--- a/Languages/Go/go_standard_library.go.txt
+++ b/Languages/Go/go_standard_library.go.txt
@@ -7,19 +7,20 @@
 
 VERSION ==>                       #See Go language
 
-DOCUMENTED ELSEWHERE ==>          #In go language (because part of language spec):
+DOCUMENTED ELSEWHERE ==>          #In go language:
                                   #  - unsafe
                                   #  - runtime.Error|TypeAssertionError
-                                  #  - runtime.Gosched|[Un]lockOSThread|Goexit|NumGoroutine, ENVVAR GODEBUG=asyncpreemptoff|schedtrace|scheddetail
+                                  #  - runtime.Gosched|[Un]lockOSThread|Goexit|NumGoroutine
                                   #  - runtime.NumCgoCall|SetCgoTraceback
                                   #In go CLI:
                                   #  - runtime.GOROOT|Compiler
                                   #  - debug.[Read]BuildInfo, runtime.Module
                                   #In go testing:
-                                  #  - testing
+                                  #  - testing[/quick]
                                   #In go debugging:
-                                  #  - runtime/pprof
+                                  #  - runtime/pprof, runtime/trace
                                   #  - runtime.Breakpoint|[Read]MemStats|*Profile*|StackRecord
+                                  #  - ENVVAR GODEBUG=asyncpreemptoff|schedtrace|scheddetail
 
 
                                              /=+===============================+=\
