--- a/Languages/Go/go_debugging.go.txt
+++ b/Languages/Go/go_debugging.go.txt
@@ -28,6 +28,7 @@ runtime.Breakpoint()              #Sets a hardware breakpoint
 
 
 gofmt|go test                     #CLI usage. Preferred
+go tool compile                   #Can use -cpuprofile|memprofile|blockprofile|mutextprofile|memprofilerate
 
 PROFFILE                          #CPUPROF|MEMPROF|BLOCKPROF|MUTEXPROF
                                   #Format is gzip protobuffer
@@ -270,6 +271,8 @@ ENVVAR PPROF_TMPDIR               #Def: ~/pprof
 ENVVAR PPROF_TOOLS
 -tools=DIR                        #DIR where go tool is located
 
+go tool addr2line ...             #Internal API for address -> function name|line translation, used by go tool pprof
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -362,6 +365,8 @@ TRACE_FILE                        #Similar to profiling, but instead:
                                   #  - logs: message|metadata at a specific point in time
 
 go test -trace=TRACE_FILE         #Write TRACE_FILE
+go tool compile
+ -traceprofile=TRACE_FILE         #Same
 
 import "runtime/trace"
 trace.Start(WRITER)->ERROR|nil
@@ -416,8 +421,8 @@ ENVVAR GODEBUG="scheddetail=1"		#Verbose mode with schedtrace=UINT
                                              \=+===============================+=/
 
 
-go build|test|get -race           #Prints a warning (with stack trace) on any data races:
-                                  #  - when two goroutines access shared memory in a thread-unsafe way
+go build|test|get|tool compile    #Prints a warning (with stack trace) on any data races:
+-race                             #  - when two goroutines access shared memory in a thread-unsafe way
                                   #Increases memory and CPU consumption a lot, i.e. only for debugging
                                   #Instruments code, i.e. only detect data races in code that is run
                                   #  - i.e. good to use in tests with high coverage
