--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -6,14 +6,15 @@
 
 TODO:
   - commands:
-     - https://golang.org/pkg/testing/quick/
-     - https://golang.org/doc/cmd
      - https://golang.org/cmd/
-        - after doing go tool asm: move doc of go build -asmflags|toolexec
-        - after doing go tool compile: move doc of go build -gcflags
-        - after doing go tool link: move doc of go build -ldflags
-     - all go CMD
-     - all go* executable
+        - https://golang.org/cmd/asm/
+           - move doc of go build -asmflags|toolexec
+        - https://golang.org/cmd/compile/
+           - move doc of go build -gcflags
+        - https://golang.org/cmd/link/
+           - move doc of go build -ldflags
+        - https://golang.org/cmd/pack/
+        - godoc: https://pkg.go.dev/golang.org/x/tools/cmd/godoc?tab=doc
      - https://pkg.go.dev/golang.org/x/tools
      - https://github.com/golang/go/wiki/GOPATH
      - https://github.com/golang/go/wiki/PackageManagementTools
@@ -35,9 +36,9 @@ TODO:
         - https://github.com/golang/go/wiki/RateLimiting
   - https://github.com/golang?type=source
   - add VSCode shortcuts
+  - delve and other debuggers
+      - https://rakyll.org/coredumps/
   - go through to_learn.txt
-     - including delve and other debuggers
-        - https://rakyll.org/coredumps/
   - https://github.com/golang/go/wiki/CodeTools
   - https://github.com/golang/go/wiki/Projects
   - https://github.com/golang/go/wiki/LearnServerProgramming#toolkits-and-frameworks
