--- a/Languages/Go/go_testing.go.txt
+++ b/Languages/Go/go_testing.go.txt
@@ -57,6 +57,25 @@ T.Verbose()->BOOL                 #
 
                                              /=+===============================+=\
                                             /  :                               :  \
+                                            )==:           TEST2JSON           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+go test -OPT... |                 #Make go test output JSON stream instead.
+ go tool test2json                #Includes verbose information:
+                                  #  - test start|pass|fail
+                                  #  - test pause|continue
+                                  #  - test skip
+                                  #  - test output|benchmark
+go tool test2json TEST_BINARY
+ -test.OPT...                     #Same
+-t                                #Adds OBJ.Time 'TIMESTAMP' to each OBJ
+-p PACKAGE                        #Adds OBJ.Package 'PACKAGE' to each OBJ
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
                                             )==:          TEST FILES           :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
@@ -116,20 +135,37 @@ T.Helper()                        #Make function as test helper, i.e. file|line 
                                              \=+===============================+=/
 
 
-import "testing/quick"
-quick.Check
- (FUNC(...)->BOOL, *CONFIG)
- ->ERROR|nil
+import "testing/quick"            #Data-driven testing with random inputs
 
-quick.Config                      #
-CONFIG.MaxCount                   #INT. Number of iterations
-CONFIG.MaxCountScale              #FLOAT64. When MaxCount 0, scale factor???
-go test -quickchecks FLOAT64      #CONFIG.MaxCountScale default value (def: 100)
-CONFIG.Rand                       #*rand.RAND. Randomness source (def: pseudo-random)
+quick.Check
+ (FUNC(VAL...)->BOOL, *CONFIG)    #Runs FUNC(VAL...) with random inputs many times.
+ ->ERROR|nil                      #Returns ERROR if any BOOL was false
+quick.CheckError                  #quick.Check()'s ERROR type
+CHECK_ERROR.Count                 #NUM of arguments that passed before failing
+CHECK_ERROR.In                    #[]VAL arguments that failed
+
+quick.CheckEqual
+ (FUNC(VAL...)->VAL2,
+ FUNC2(VAL3...)->VAL4, *CONFIG)
+ ->ERROR|nil                      #Same but calling two functions and checking that their return values are equal
+quick.CheckEqualError             #
+CHECK_EQUAL_ERROR.Out1|Out2       #[]VAL arguments that failed in FUNC|FUNC2
+
+quick.SetupError                  #ERROR type when quick.Check[Equal]() are called with wrong arguments
+
+quick.Config                      #Options
+CONFIG.Rand                       #*rand.RAND. Randomness source (def: rand.NewSource() using current time-ns as seed)
+
+go test -quickchecks FLOAT64      #Number of iterations (def: 100)
+CONFIG.MaxCount                   #INT. Set number of iterations to a specific number.
+CONFIG.MaxCountScale              #FLOAT64. Multiply number of iterations by FLOAT64
 
 quick.Value
  (reflect.TYPE, *rand.RAND)
- ->reflect.VALUE,OK               #Retrieves a random value from a specific type
+ ->reflect.VALUE,OK               #Low-level API used by quick.Check[Equal] to retrieve a random value from a specific type
+quick.Generator                   #INTERFACE to apply on any reflect.TYPE in order to customize quick.Value()
+GENERATOR.Generate
+ (*rand.RAND, INT)->reflect.VALUE #INT is size hint (always 50)
 CONFIG.Values
  ([]reflect.VALUE, *rand.RAND)    #Customize how random values are generated
 
