no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -10,7 +10,6 @@ TODO:
         - https://golang.org/cmd/asm/
            - move doc of go build -asmflags|toolexec
         - https://golang.org/cmd/compile/
-           - move doc of go build -gcflags
         - https://golang.org/cmd/link/
            - move doc of go build -ldflags
         - https://golang.org/cmd/pack/
@@ -574,7 +573,7 @@ func FUNC([VAR] [TYPE],...)       #Function declaration
                                   #  - if no arguments:
                                   #     - no MVAL arguments: nil
                                   #     - empty SLICE... argument: empty SLICE
-                                  #{ ... } can be omitted if FUNC is declared in C|Assembly
+                                  #{ ... } can be omitted if FUNC is declared in C|ASM
 nil                               #Zero-value
                                   #Cannot call
 
@@ -933,7 +932,7 @@ runtime.Goexit()                  #Stops current goroutine. Other goroutines kee
 
 runtime.LockOSThread()            #Ensure goroutine always re-use the same thread
                                   #Can be done several times, requiring several call to UnlockOSThread() to undo
-                                  #Only useful when using C or Assembly to use thread-specific memory (e.g. errno)
+                                  #Only useful when using C|ASM to use thread-specific memory (e.g. errno)
 runtime.UnlockOSThread()          #Inverse
 
 runtime.NumGoroutine()->INT       #Number of running goroutines
