--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -70,6 +70,7 @@ go tool compile
 -D DIR                            #Relative IMPORT_PATHs base (instead of $PWD)
 -nolocalimports                   #Disallow relative IMPORT_PATHs
 -importmap=IMPORT_PATH=IMPORTPATH2#Rename any import "IMPORT_PATH" to import "IMPORT_PATH2"
+go tool compile|link
 -importcfg=FILE                   #FILE contains lines with
                                   #  - importmap IMPORT_PATH=IMPORT_PATH2: like -importmap
                                   #  - packagefile IMPORT_PATH=PATH: like -importmap but using a PATH
@@ -562,8 +563,9 @@ go build IMPORT_PATHS             #Compile *.go:
                                   #  - if module-aware, MODULE_PATH last part
                                   #  - otherwise, DIR name
                                   #Always ignored: *_test.go, .*.go, _*.go, testdata/**.go
-go tool compile                   #Can use -installsuffix|msan|trimpath|linkshared
-                                  #Can also use -p (named -c and defaulting to 1)
+go tool compile|link              #Can use -installsuffix|msan|linkshared
+go tool compile                   #Can use -trimpath, -p (named -c and defaulting to 1)
+go tool link                      #Can use -buildmode (def: 'exe')
 
 -o FILE|DIR                       #Output BINARY path
 -installsuffix STR                #Prepend STR to installation DIR name
@@ -603,8 +605,6 @@ go tool compile                   #Can use -installsuffix|msan|trimpath|linkshar
 
 go build -asmflags
  '[IMPORT_PATHS=]ARGS'            #Pass arguments to underlying go tool asm ARGS
-go build -ldflags
- '[IMPORT_PATHS=]ARGS'            #Pass arguments to underlying go tool link ARGS
 go build -toolexec 'PATH [ARGS]'  #Use a different program than go tool asm under the hood
 
 
@@ -642,16 +642,21 @@ go build -toolexec 'PATH [ARGS]'  #Use a different program than go tool asm unde
 
 
 //line [FILE]:LINE[:COL]          #Specifies that the next line was implemented in FILE:LINE:COL
-                                  #Meant for debugging information
+                                  #Meant for debugging information of FUNCs implemented in C|ASM.
+
+//go:linkname VAR                 #Make VAR (declared in current PACKAGE) available to any other PACKAGEs
+ [IMPORT_PATH.VAR2]               #If specified, also alias it to VAR2, importable with IMPORT_PATH
+                                  #IMPORT_PATH must declare VAR2, but without body (if FUNC)
+                                  #Must import "unsafe"
 
 FUNCTION DIRECTIVES ==>           #All the following directives target the FUNC declaration on next line.
-//go:noescape                     #Function declaration must not have a body (meaning that the function has an implementation not written in Go). It specifies that the function does not allow any of the pointers passed as arguments to escape into the heap or into the values returned from the function. This information can be used during the compiler's escape analysis of Go code calling the function.
-//go:uintptrescapes               #Specifies that the function's uintptr arguments may be pointer values that have been converted to uintptr and must be treated as such by the garbage collector. The conversion from pointer to uintptr must appear in the argument list of any call to this function. This directive is necessary for some low-level system call implementations and should be avoided otherwise.
-//go:noinline                     #Specifies that calls to the function should not be inlined, overriding the compiler's usual optimization rules. This is typically only needed for special runtime functions or when debugging the compiler.
-//go:norace                       #Specifies that the function's memory accesses must be ignored by the race detector. This is most commonly used in low-level code invoked at times when it is unsafe to call into the race detector runtime.
-//go:nosplit                      #Specifies that the function must omit its usual stack overflow check. This is most commonly used by low-level runtime code invoked at times when it is unsafe for the calling goroutine to be preempted.
-
-//go:linkname localname [importpath.name]   #This special directive does not apply to the Go code that follows it. Instead, the //go:linkname directive instructs the compiler to use “importpath.name” as the object file symbol name for the variable or function declared as “localname” in the source code. If the “importpath.name” argument is omitted, the directive uses the symbol's default object file symbol name and only has the effect of making the symbol accessible to other packages. Because this directive can subvert the type system and package modularity, it is only enabled in files that have imported "unsafe".
+                                  #All only needed for very low-level code.
+//go:noinline                     #Do not inline this FUNC.
+//go:noescape                     #Any *TYPE argument|returns of this FUNC must never be stored on the heap.
+                                  #Only for FUNCs implemented in C|ASM.
+//go:uintptrescapes               #Keep reference of value of this FUNC's uintptr argument.
+//go:nosplit                      #Do not check for stack overflow on this FUNC.
+//go:norace                       #Do not run the data race detector (-race) on this FUNC.
 
 
                                              /=+===============================+=\
@@ -727,11 +732,50 @@ go build -gcflags
 
 go tool link FILE.a               #Low-level API, second step of go build
                                   #Produces executable BINARY from FILE.o|a
+go build -ldflags
+ '[IMPORT_PATHS=]ARGS'            #Pass arguments to underlying go tool link ARGS
+
+-o=FILE                           #Output path (def: FILE.out[.exe])
 
 go tool compile
 -dynlink Allow references to Go symbols in shared libraries (experimental).
 -linkobj file Write linker-specific object to file and compiler-specific object to usual output file (as specified by -o).  Without this flag, the -o output is a combination of both linker and compiler input.
 -shared generate code that can be linked into a shared library
+
+-B note Add an ELF_NT_GNU_BUILD_ID note when using ELF.  The value should start with 0x and be an even number of hex digits.
+-E entry Set entry symbol name.
+-H type Set executable format type.  The default format is inferred from GOOS and GOARCH.  On Windows, -H windowsgui writes a "GUI binary" instead of a "console binary."
+-I interpreter Set the ELF dynamic linker to use.
+-L dir1 -L dir2 Search for imported packages in dir1, dir2, etc, after consulting $GOROOT/pkg/$GOOS_$GOARCH.
+-R quantum Set address rounding quantum.
+-T address Set text segment address.
+-V Print linker version and exit.
+-X importpath.name=value Set the value of the string variable in importpath named name to value.  This is only effective if the variable is declared in the source code either uninitialized or initialized to a constant string expression. -X will not work if the initializer makes a function call or refers to other variables.
+-benchmark string set to 'mem' or 'cpu' to enable phase benchmarking
+-benchmarkprofile base emit phase profiles to base_phase.{cpu,mem}prof
+-c Dump call graphs.
+-compressdwarf=false Do not compress DWARF
+-d Disable generation of dynamic executables.  The emitted code is the same in either case; the option controls only whether a dynamic header is included.  The dynamic header is on by default, even without any references to dynamic libraries, because many common system tools now assume the presence of the header.
+-debugtramp int Debug trampolines.
+-dumpdep Dump symbol dependency graph.
+-extar ar Set the external archive program (default "ar").  Used only for -buildmode=c-archive.
+-extld linker Set the external linker (default "clang" or "gcc").
+-extldflags flags Set space-separated flags to pass to the external linker.
+-f Ignore version mismatch in the linked archives.
+-g Disable Go package data checks.
+-h	halt on error
+-k symbol Set field tracking symbol. Use this flag when GOEXPERIMENT=fieldtrack is set.
+-libgcc file Set name of compiler support library.  This is only used in internal link mode.  If not set, default value comes from running the compiler, which may be set by the -extld option.  Set to "none" to use no support library.
+-linkmode mode Set link mode (internal, external, auto).  This sets the linking mode as described in cmd/cgo/doc.go.
+-n Dump symbol table.
+-pluginpath path The path name used to prefix exported plugin symbols.
+-r dir1:dir2:...  Set the ELF dynamic linker search path.
+-s Omit the symbol table and debug information.
+-strictdups int sanity check duplicate symbol contents during object file reading (1=warn 2=err).
+-tmpdir dir Write temporary files to dir.  Temporary files are only used in external linking mode.
+-u Reject unsafe packages.
+-v Print trace of linker operations.
+-w Omit the DWARF symbol table.
 
 
                                              /=+===============================+=\
@@ -819,7 +863,7 @@ BUILD_ID ==>                      #BINARY checksum that does not include data th
 go tool buildid BINARY            #Prints BUILD_ID
 -w                                #Re-create BUILD_ID
 
-go tool compile -buildid=ID       #Sets explicit BUILD_ID
+go tool compile|link -buildid=ID  #Sets explicit BUILD_ID
 
 
                                              /=+===============================+=\
