--- a/Languages/Go/go_debugging.go.txt
+++ b/Languages/Go/go_debugging.go.txt
@@ -28,7 +28,8 @@ runtime.Breakpoint()              #Sets a hardware breakpoint
 
 
 gofmt|go test                     #CLI usage. Preferred
-go tool compile                   #Can use -cpuprofile|memprofile|blockprofile|mutextprofile|memprofilerate
+go tool compile|link              #Can use -cpuprofile|memprofile|memprofilerate
+go tool compile                   #Can use -blockprofile|mutextprofile
 
 PROFFILE                          #CPUPROF|MEMPROF|BLOCKPROF|MUTEXPROF
                                   #Format is gzip protobuffer
@@ -421,9 +422,9 @@ ENVVAR GODEBUG="scheddetail=1"		#Verbose mode with schedtrace=UINT
                                              \=+===============================+=/
 
 
-go build|test|get|tool compile    #Prints a warning (with stack trace) on any data races:
--race                             #  - when two goroutines access shared memory in a thread-unsafe way
-                                  #Increases memory and CPU consumption a lot, i.e. only for debugging
+go build|test|get|                #Prints a warning (with stack trace) on any data races:
+ tool compile|link                #  - when two goroutines access shared memory in a thread-unsafe way
+-race                             #Increases memory and CPU consumption a lot, i.e. only for debugging
                                   #Instruments code, i.e. only detect data races in code that is run
                                   #  - i.e. good to use in tests with high coverage
                                   #Adds the "race" build tag
